# to-do-app

./: CMakeLists.txt
apps/desktop/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
core/domain/: CMakeLists.txt  Habit.cpp  Habit.h  HabitCheckIn.cpp  HabitCheckIn.h
